@@ -57,6 +57,8 @@ BUG FIXES:
 FEATURES:
 	- New config option "ip-transparent:" to allow NSD to bind to
 	  non local addresses. Default no.
+	- Bugfix #496: Support for EUI48 and EUI64 RR types. Experimental,
+	  turned off by default. Enable with --enable--eui-rrtypes.
 	- New config option "rrl-slip:" to set the average number of
 	  packets discarded before we send back a truncated response.
 	- New config option "rrl-ipv4-prefix-length:" and
